--- a/.github/workflows/bild-and-publish.yml
+++ b/.github/workflows/bild-and-publish.yml
@@ -4,7 +4,7 @@ name: Deploy static content to Pages
 on:
   # Runs on pushes targeting the default branch (usually 'main' or 'master')
   push:
-    branches: ['main'] # Change to 'master' if that's your default branch
+    branches: ['master'] # Change to 'master' if that's your default branch
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v4 # Always good practice to use the latest major version
 
       - name: Deploy app to gh-pages
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/master'
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
